<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group>
        <!--android:checkableBehavior="single"-->
        <item
            android:id="@+id/autonomous"
            android:icon="@drawable/ic_autonomous"
            android:title="@string/autonomous" />
        <item
            android:id="@+id/remote"
            android:icon="@drawable/ic_remote"
            android:title="@string/remote" />
        <item
            android:id="@+id/line"
            android:icon="@drawable/ic_line_tracker"
            android:title="@string/line_tracker" />
        <item
            android:id="@+id/slave"
            android:icon="@drawable/ic_slave"
            android:title="@string/slave" />
    </group>

</menu>
